src/objects/Participant_Sequence_History__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Id</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Participant Sequence History</relationshipLabel>
        <relationshipName>Participant_Sequence_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Id</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Participant Sequence History</relationshipLabel>
        <relationshipName>Participant_Sequence_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sequence_Id__c</fullName>
        <label>Sequence Id</label>
        <referenceTo>Cadence__c</referenceTo>
        <relationshipLabel>Participant Sequence History</relationshipLabel>
        <relationshipName>Participant_Sequence_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Participant Sequence History</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Participant Sequence History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participant Sequence History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>